# aeon-engine2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  clang_format.sh  conanfile.py  dependencies.txt
engine/: CMakeLists.txt
engine/common/: CMakeLists.txt
engine/common/public/aeon/engine/common/: filter_type.h  format.h  vertex_data.h
engine/core/: CMakeLists.txt
engine/core/private/hal/: default_file_manager.cpp  default_file_manager.h  file_manager.cpp
engine/core/public/aeon/engine/core/hal/: file_manager.h
engine/core/public/aeon/engine/core/types/: filter_type.h  path.h  vertex_data.h
engine/import/: CMakeLists.txt
engine/import/private/: importer_impl.cpp  importer_impl.h
engine/import/private/codecs/: codec.h
engine/import/private/codecs/assimp/: assimp_codec.cpp  assimp_codec.h  generic_image_codec.cpp  generic_image_codec.h
engine/import/public/aeon/engine/import/: import_result.h  importer.h
engine/import/public/aeon/import/: importer.h
engine/renderer/: CMakeLists.txt
engine/renderer/public/aeon/renderer/: mesh.h
engine/resources/: CMakeLists.txt
engine/resources/private/: material_data.cpp  mesh_data.cpp  resource_data.cpp  scene_node_data.cpp  scene_prefab_data.cpp  texture_data.cpp
engine/resources/public/aeon/engine/resources/: material_data.h  mesh_data.h  resource_data.h  scene_node_data.h  scene_prefab_data.h  texture_data.h
engine/resources/public/aeon/resources/: mesh_data.h
engine/rhi/: CMakeLists.txt
engine/rhi/private/: resource.cpp  rhi.cpp
engine/rhi/public/aeon/engine/rhi/: blend_state.h  bound_shader_state.h  buffer.h  context.h  depth_stencil_state.h  device.h  graphics_pipeline_state.h  input_layout_description.h  primitive_topology.h  rasterizer_state.h  resource.h  resource_data.h  rhi.h  rhi_plugin.h  sampler_state.h  shader.h  shader_resource_view.h  texture.h  viewport.h  wrap_mode.h
engine/rhi/public/aeon/rhi/: blend_state.h  bound_shader_state.h  buffer.h  context.h  depth_stencil_state.h  device.h  filter_type.h  format.h  graphics_pipeline_state.h  input_layout_description.h  primitive_topology.h  rasterizer_state.h  resource.h  resource_data.h  rhi.h  rhi_plugin.h  sampler_state.h  shader.h  shader_resource_view.h  texture.h  viewport.h  wrap_mode.h
engine/rhi/tests/: CMakeLists.txt
engine/rhi/tests/test_aeon_engine_rhi/: main.cpp  test_rhi.cpp
engine/rhi_dx11/: CMakeLists.txt
engine/rhi_dx11/private/: checked_hresult.h  dx11_context.cpp  dx11_context.h  dx11_device.cpp  dx11_device.h  dx11_rhi_blend_state.h  dx11_rhi_bound_shader_state.h  dx11_rhi_buffer.h  dx11_rhi_converters.h  dx11_rhi_depth_stencil_state.h  dx11_rhi_graphics_pipeline_state.h  dx11_rhi_plugin.cpp  dx11_rhi_plugin.h  dx11_rhi_rasterizer_state.h  dx11_rhi_sampler.h  dx11_rhi_shader.h  dx11_rhi_shader_resource_view.h  dx11_rhi_texture.h
runtime/: CMakeLists.txt
runtime/private/: main.cpp
